--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.DAFP.RAPID",
+  "name": "com.dafp.rapid-dev-kit",
   "version": "1.0.0",
   "displayName": "R.A.P.I.D Development Kit",
   "description": "dx!=0.0f",
